[package]
name = "restaurant_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
serde_json = "1.0.125"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] } # Enable the serde feature